@@ -370,6 +370,7 @@ t/434_gocr_with_error.t
 t/51_process_chain.t
 t/52_process_chain_udt.t
 t/53_process_chain.t
+t/54_process_chain_w_delete.t
 t/6_PageRange.t
 t/75_Bboxtree.t
 t/7_Canvas.t
